--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
-  "name": "Korral",
-  "version": "0.0.1",
+  "name": "Korral2",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "3.4.8",
-    "jade": "*",
-    "node-sass": "*"
+    "express": "~4.9.0",
+    "body-parser": "~1.8.1",
+    "cookie-parser": "~1.3.3",
+    "morgan": "~1.3.0",
+    "serve-favicon": "~2.1.3",
+    "debug": "~2.0.0",
+    "jade": "~1.6.0",
+    "stylus": "0.42.3",
+    "nconf": "*",
+    "documentdb": "*",
+    "q": "*"
   }
 }
