--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node": "0.10.32"
+  },
   "dependencies": {
     "express": "4.9.0",
     "body-parser": "~1.8.1",
